  23 May 2014; Manuel Rüger <mrueg@gentoo.org> redmine-2.5.1.ebuild:
  [www-apps/redmine] Drop keyword as it is not working.

  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine-2.4.5.ebuild,
  redmine-2.5.1.ebuild:
  [www-apps/redmine] Fix typo.

  18 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine-2.4.5.ebuild:
  [www-apps/redmine] Fix 2.4.5.

*redmine-2.4.5 (18 Apr 2014)

  18 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +redmine-2.4.5.ebuild,
  redmine-2.5.1.ebuild:
  [www-apps/redmine] Add redmine-2.4.5, add missing dep.

*redmine-2.5.1 (31 Mar 2014)

  31 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +files/10_redmine_vhost.conf,
  +files/redmine-2.initd, +files/redmine.confd, +metadata.xml,
  +redmine-2.5.1.ebuild:
  [www-apps/redmine] Version bump. Ebuild taken from the tree.