@@ -1,2 +1,2 @@
-DIST redmine-2.4.5.tar.gz 3883802 SHA256 bf5fde731636634b952174d0e04425f753b1a2475ab2253ceeb4631a85358eda SHA512 a748f2d2a96d5512717939b4f08396c6c2fcf93418b2475aacd70d27d8ec65e6001378a1b5ccea4b0823bd076351247655a5f9fdc211cb3947ff2173350011a7 WHIRLPOOL 950c33478c415dc5e790b2752ee5f969715c113ad467fc06111ba417fe659487faa7f27996be2f99aa40d99018d4a730c3a3f4ebc1c97cb7facb34cb81424b8d
+DIST redmine-2.4.6.tar.gz 3885107 SHA256 9dd35c9f50fcd20724c328860253c78fe0155a5f58bbf90357d72d44900a7601 SHA512 722bdb4e5dd5246dfdee2819c65d024c34368d4cbb34d27a2832909b2b82f6e677e7312fa085971c6fb78c2aa4d06552d06e2314e19c4e3d0b211fcc1ec4d911 WHIRLPOOL e1b4213f7aef6d97afadde194e6f99f6d7f61a5cc9775fb8619cda6fbe2b42a3b783039fdacfa80b40d0c86fa235d397f39f0d3d37b5a7626facfd70fe058f06
 DIST redmine-2.5.1.tar.gz 3889516 SHA256 1580396c030c1233e9acffcb97bf43b69fb3c04c6b00accbabf77d2a4a8c93f0 SHA512 ef81a6988e5531a4182f898cc1b413d2f62fe7c7258fb8933cb8d44de42aa8b75eea7a583573b09244a493b9cf6104f2b5f6b81a3eb44d6543b95139ce7bb99a WHIRLPOOL 8b321c9857c85769262f7f19083793f22cb2c1274ce052b37c2e34a9f1c628225c4561189d1fad30868fa239c7c740440290e847a72790380a961b5b46e0d006
