@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/redmine/redmine-2.3.4.ebuild,v 1.1 2014/01/10 12:20:20 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/redmine/redmine-2.4.5.ebuild,v 1.1 2014/06/01 18:11:37 pva Exp $
 
 EAPI=5
 USE_RUBY="ruby19"
@@ -16,23 +16,21 @@ SLOT="0"
 # All db-related USEs are ineffective since we depend on rails
 # which depends on activerecord which depends on all ruby's db bindings
 #IUSE="ldap openid imagemagick postgres sqlite mysql fastcgi passenger"
-IUSE="fastcgi imagemagick ldap openid passenger"
+IUSE="ldap imagemagick fastcgi passenger"
 
 #RDEPEND="$(ruby_implementation_depend jruby '>=' -1.6.7)[ssl]"
 
 ruby_add_rdepend "virtual/ruby-ssl
 	virtual/rubygems
-	>=dev-ruby/rails-3.2.17:3.2
+	>=dev-ruby/rails-3.2.19:3.2
 	>=dev-ruby/jquery-rails-2.0.2
 	dev-ruby/i18n:0.6
-	>=dev-ruby/coderay-1.1.0
+	>=dev-ruby/coderay-1.0.9
 	dev-ruby/builder:3
 	dev-ruby/rake
 	ldap? ( >=dev-ruby/ruby-net-ldap-0.3.1 )
-	openid? (
-		>=dev-ruby/ruby-openid-2.3.0
-		dev-ruby/rack-openid
-	)
+	>=dev-ruby/ruby-openid-2.3.0
+	>=dev-ruby/rack-openid-0.2.1
 	imagemagick? ( >=dev-ruby/rmagick-2 )
 	fastcgi? ( dev-ruby/fcgi )
 	passenger? ( www-apache/passenger )"
@@ -40,13 +38,6 @@ ruby_add_rdepend "virtual/ruby-ssl
 #		postgres? ( >=dev-ruby/pg-0.11 )
 #		sqlite3? ( dev-ruby/sqlite3 )
 #		mysql? ( dev-ruby/mysql2:0.3 )
-#	)
-#	ruby_targets_jruby? (
-#		dev-ruby/jruby-openssl
-#		>=dev-ruby/fastercsv-1.5
-#		mysql? ( dev-ruby/activerecord-jdbcmysql-adapter )
-#		postgres? ( dev-ruby/activerecord-jdbcpostgresql-adapter )
-#		sqlite3? ( dev-ruby/activerecord-jdbcsqlite3-adapter )
 #	)
 
 #ruby_add_bdepend ">=dev-ruby/rdoc-2.4.2
@@ -76,9 +67,7 @@ all_ruby_prepare() {
 	echo "CONFIG_PROTECT=\"${EPREFIX}${REDMINE_DIR}/config\"" > "${T}/50${PN}"
 	echo "CONFIG_PROTECT_MASK=\"${EPREFIX}${REDMINE_DIR}/config/locales ${EPREFIX}${REDMINE_DIR}/config/settings.yml\"" >> "${T}/50${PN}"
 
-	# remove openid module in case openid is disabled
-	use openid || rm -r lib/plugins/open_id_authentication || die
-	# remove ldap staff module to avoid #413779
+	# remove ldap staff module if disabled to avoid #413779
 	use ldap || rm app/models/auth_source_ldap.rb || die
 }
 
